# trader-board

./: .gitignore  README.md
backend/: env.json  pyproject.toml  run.py
backend/backend/: __init__.py  contanst.py  data_fetcher.py  db.py  indicators.py  schema.sql
backend/backend/api/: auth.py  debugg.py  stock.py
backend/backend/api/utils/: exceptions.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/add-stock-input/: index.tsx
frontend/src/components/carousels/: index.tsx
frontend/src/components/default-landing-page/: index.tsx
frontend/src/components/default-landing-page/mock-data/: process-json.py  stocks_daily.json
frontend/src/components/header/: index.tsx
frontend/src/components/loading-skeleton/: index.tsx
frontend/src/components/stock-graph/: index.tsx
frontend/src/components/user-dashboard/: index.tsx
frontend/src/constant/: api-error-code.ts
frontend/src/pages/home/: index.tsx
frontend/src/pages/login/: index.tsx
frontend/src/pages/register/: index.tsx
frontend/src/service/: api.tsx  interface.ts
